test/apps/errors/__sapper__/build/client/no-error.c846cc9e.js
import { S as SvelteComponent, i as init, s as safe_not_equal, e as element, d as text, f as space, h as claim_element, j as children, k as claim_text, l as detach, C as attr, m as insert, o as append, p as set_data, n as noop } from './chunk.e83f0b4f.js';

/* test/apps/errors/src/routes/no-error.svelte generated by Svelte v3.6.9 */

function create_fragment(ctx) {
	var h1, t0_value = ctx.error ? ctx.error.message : 'No error here', t0, t1, a, t2;

	return {
		c() {
			h1 = element("h1");
			t0 = text(t0_value);
			t1 = space();
			a = element("a");
			t2 = text("Enhance your calm");
			this.h();
		},

		l(nodes) {
			h1 = claim_element(nodes, "H1", {}, false);
			var h1_nodes = children(h1);

			t0 = claim_text(h1_nodes, t0_value);
			h1_nodes.forEach(detach);
			t1 = claim_text(nodes, "\r\n\r\n");

			a = claim_element(nodes, "A", { href: true }, false);
			var a_nodes = children(a);

			t2 = claim_text(a_nodes, "Enhance your calm");
			a_nodes.forEach(detach);
			this.h();
		},

		h() {
			attr(a, "href", "enhance-your-calm");
		},

		m(target, anchor) {
			insert(target, h1, anchor);
			append(h1, t0);
			insert(target, t1, anchor);
			insert(target, a, anchor);
			append(a, t2);
		},

		p(changed, ctx) {
			if ((changed.error) && t0_value !== (t0_value = ctx.error ? ctx.error.message : 'No error here')) {
				set_data(t0, t0_value);
			}
		},

		i: noop,
		o: noop,

		d(detaching) {
			if (detaching) {
				detach(h1);
				detach(t1);
				detach(a);
			}
		}
	};
}

function instance($$self, $$props, $$invalidate) {
	let { error } = $$props;

	$$self.$set = $$props => {
		if ('error' in $$props) $$invalidate('error', error = $$props.error);
	};

	return { error };
}

class No_error extends SvelteComponent {
	constructor(options) {
		super();
		init(this, options, instance, create_fragment, safe_not_equal, ["error"]);
	}
}

export default No_error;
